5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1585_2894.log
== TEST (2019-03-21 11:33:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = 50.0
site2 = 30.0
site2 = 40.0
frete = 45.0
var = input(float("site1 = 50.0"))
var = input(float("site2 = 30.0"))
var = input(float("site2 = 40.0")
print(?????)
-- ERROR:
File "XXXX", line 9
    print(?????)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = 50.0
site2 = 30.0
site3 = 40.0
frete = 45.0
var1 = float("site1:", 50)
var2 = float("site2:", 30)
var3 = float("site2:", 40)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var1 = float("site1:", 50)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = 50.0
site2 = 30.0
site3 = 40.0
frete = 45.0
var1 = float("site1:", 50)
var2 = float("site2:", 30)
var3 = float("site2:", 40)
print(input("em qual site voce deja comprar?"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var1 = float("site1:", 50)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = 50.0
site2 = 30.0
site3 = 40.0
frete = 45.0
var1 = print("site1:", 50)
var2 = print("site2:", 30)
var3 = print("site2:", 40)
print(input("em qual site voce deja comprar?"))
-- OUTPUT:
site1: 50
site2: 30
site2: 40
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = 50.0
site2 = 30.0
site3 = 40.0
frete = 45.0
var1 = print("site1:", 50)
var2 = print("site2:", 30)
var3 = print("site2:", 40)
print(input("em qual site voce deseja comprar?"))
se site1:
	50 + 45

-- ERROR:
File "XXXX", line 10
    se site1:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = 50.0
site2 = 30.0
site3 = 40.0
frete = 45.0
var1 = print("site1:", 50)
var2 = print("site2:", 30)
var3 = print("site2:", 40)
print(input("em qual site voce deseja comprar?"))


-- OUTPUT:
site1: 50
site2: 30
site2: 40
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:51:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = 50.0*8 + frete
site2 = 30.0*8 + frete
site3 = 40.0*8 + frete
frete = 45.0
var = input("qual saite vc quer comprer?")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    site1 = 50.0*8 + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:54:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 =float (50.0*8 + frete)
site2 =float (30.0*8 + frete)
site3 =float (40.0*8 + frete)
frete = 45.0
var = input("qual saite vc quer comprer?")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    site1 =float (50.0*8 + frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:54:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 =float (50.0*8 + frete)
site2 =float (30.0*8 + frete)
site3 =float (40.0*8 + frete)
taxa = 45.0
var = input("qual saite vc quer comprer?")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    site1 =float (50.0*8 + frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:54:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 =float (50.0*8 + frete)
site2 =float (30.0*8 + frete)
site3 =float (40.0*8 + frete)
taxa = 45.0
var = input("qual saite vc quer comprer?")


-- EXECUTION TIME:
0.132446
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2894/main.py", line 2, in <module>
    site1 =float (50.0*8 + frete)
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 =float (50.0*8 + frete)
site2 =float (30.0*8 + frete)
site3 =float (40.0*8 + frete)
taxa = 45.0
var = input("qual saite vc quer comprer?")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    site1 =float (50.0*8 + frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:36:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 =float (50.0*8)
site2 =float (30.0*8)
site3 =float (40.0*8)
taxa = 45.0
var = input("qual saite vc quer comprer?")
se site1:
	print(float(site1 + taxa))
se site2:
	print(float(site2 + taxa))
se site3:
	print(float(site3 + taxa))
 	


-- ERROR:
File "XXXX", line 7
    se site1:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:36:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 =float (50.0*8)
site2 =float (30.0*8)
site3 =float (40.0*8)
taxa = 45.0
var = input("qual saite vc quer comprer?")
se site1 
	print(float(site1 + taxa))
se site2
	print(float(site2 + taxa))
se site3
	print(float(site3 + taxa))
 	


-- ERROR:
File "XXXX", line 7
    se site1 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:37:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 =float (50.0*8)
site2 =float (30.0*8)
site3 =float (40.0*8)
taxa = 45.0
var = input("qual saite vc quer comprer?")
#se site1 
	print(float(site1 + taxa))
#se site2
	print(float(site2 + taxa))
#se site3
	print(float(site3 + taxa))
 	


-- ERROR:
File "XXXX", line 8
    print(float(site1 + taxa))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:39:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = input("qual saite vc quer comprer?")
#se site1 
	print(float(site1 + taxa))
#se site2
	print(float(site2 + taxa))
#se site3
	print(float(site3 + taxa))
 	


-- ERROR:
File "XXXX", line 8
    print(float(site1 + taxa))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:40:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
print(input("qual saite vc quer comprer?"))
#se site1 
	print(float(site1 + taxa))
#se site2
	print(float(site2 + taxa))
#se site3
	print(float(site3 + taxa))
 	


-- ERROR:
File "XXXX", line 8
    print(float(site1 + taxa))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:42:19) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
print(input("qual saite vc quer comprer?"))
#se site1 
	float(site1 + taxa)
#se site2
	float(site2 + taxa)
#se site3
	float(site3 + taxa)
 	


-- ERROR:
File "XXXX", line 8
    float(site1 + taxa)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:42:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
print(input("qual site vc quer comprer?"))
#se site1 
	float(site1 + taxa)
#se site2
	float(site2 + taxa)
#se site3
	float(site3 + taxa)
 	


-- ERROR:
File "XXXX", line 8
    float(site1 + taxa)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:54:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
print(input("qual site vc quer comprer?"))
#se site1 
float(site1 + taxa)
#se site2
float(site2 + taxa)
#se site3
float(site3 + taxa)
 	


-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:54:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
print(input("qual site vc quer comprer?"))
#se site1 
float(site1 + taxa)
#se site2
float(site2 + taxa)
#se site3
float(site3 + taxa)
 	


-- EXECUTION TIME:
0.148749
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
1.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
356
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:55:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = input("qual site vc quer comprer?"))
#se site1 
float(site1 + taxa)
#se site2
float(site2 + taxa)
#se site3
float(site3 + taxa)
 	


-- EXECUTION TIME:
0.172346
-- ERROR:
  File "/home/codebench/codes/1585/2894/main.py", line 6
    var = input())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:08:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = input("qual site vc quer comprer?"))
#se site1 
float(site1 + taxa)
#se site2
float(site2 + taxa)
#se site3
float(site3 + taxa)
 	


-- ERROR:
File "XXXX", line 6
    var = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:08:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = input("qual site vc quer comprer?")
#se site1 
float(site1 + taxa)
#se site2
float(site2 + taxa)
#se site3
float(site3 + taxa)
 	


-- ERROR:
File "XXXX", line 6
    var = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:08:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = input("qual site vc quer comprar? " )
#se site1 
float(site1 + taxa)
#se site2
float(site2 + taxa)
#se site3
float(site3 + taxa)
 	


-- ERROR:
File "XXXX", line 6
    var = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:10:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = input("qual site vc quer comprar? " )
print(var + taxa)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var + taxa)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:10:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = float(input("qual site vc quer comprar? " ))
print(var + taxa)



-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:12:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = float(input("qual site vc quer comprar? " ))
print(float(var + taxa))



-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:12:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = (input("qual site vc quer comprar? " ))
print(float(var + taxa))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(float(var + taxa))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:12:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
site1 = float(50.0*8)
site2 = float(30.0*8)
site3 = float(40.0*8)
taxa = 45.0
var = (input("qual site vc quer comprar? " ))
print(int(var + taxa))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(var + taxa))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:17:29) 
-- CODE:
game = input("valor do jogo:")
frete = 45.0
total = float(game + frete)
print(total)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = float(game + frete)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:18:17) 
-- CODE:
game = float(input("valor do jogo:"))
frete = 45.0
total = (game + frete)
print(total)



-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:18:26) 
-- CODE:
game = float(input("valor do jogo:"))
frete = 45.0
total = (game + frete)
print(total)



-- EXECUTION TIME:
0.142468
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:18:39) 
-- CODE:
game = float(input("valor do jogo:"))
frete = 45.0
total = (game*8 + frete)
print(total)



-- EXECUTION TIME:
0.113674
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
